deploy: 6162f7ad7b6d8c5e2a8ae57759726f9d3b49f4b0

--- a/License/SQLD/index.html
+++ b/License/SQLD/index.html
@@ -648,6 +648,31 @@
 
 
 
+제 2 정규화
+
+  
+    완전 함수 종속을 만들도록 분리
+ 완전 함수 종속 : 기본키가 해당 컬럼을 완전히 결정할 수 있도록
+    강의실의 경우 완전 함수 종속을 위배한 부분 함수 종속 이므로, PK 강의명으로부터 분리
+  
+
+
+
+  
+    
+  
+
+
+제 3 정규화
+
+  
+    이행적 종속을 없애도록 테이블을 분리
+  이행적 종속 : A → B, B → c 일 때, A → C 성립
+    상품명과 가격은 분리 불가, 고객번호와 가격은 분리 가능
+  
+
+
+
                         </a>
                         <div class="info-post">
                                 <a href="/License" class="category">License</a>
