--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1095,7 +1095,7 @@
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
