--- a/Writing Manual/Guide/Comment System.html
+++ b/Writing Manual/Guide/Comment System.html
@@ -1181,7 +1181,7 @@ giscus_categoryId: "[ENTER CATEGORY ID HERE]"
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
