--- a/Writing Manual/Guide/Posting Guide.html
+++ b/Writing Manual/Guide/Posting Guide.html
@@ -1285,7 +1285,7 @@ bookmark: true
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
