--- a/License/SQLD/기초 데이터베이스 개념.html
+++ b/License/SQLD/기초 데이터베이스 개념.html
@@ -1157,7 +1157,7 @@
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
