--- a/License/네트워크관리사/IP 관련/index.html
+++ b/License/네트워크관리사/IP 관련/index.html
@@ -1312,7 +1312,7 @@ IP 주소 체계
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
