--- a/License/네트워크관리사/TCP-UDP/index.html
+++ b/License/네트워크관리사/TCP-UDP/index.html
@@ -1196,7 +1196,7 @@ TCP와 UDP 비교 정리
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
