--- a/License/네트워크관리사/포트-프로토콜/index.html
+++ b/License/네트워크관리사/포트-프로토콜/index.html
@@ -1430,7 +1430,7 @@ RIP
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
