--- a/Writing Manual/Guide/index.html
+++ b/Writing Manual/Guide/index.html
@@ -1693,7 +1693,7 @@ Allow adding visitor counts on your website 가 선택되어있는 지 확인하
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
