--- a/Writing Manual/example/example_01.html
+++ b/Writing Manual/example/example_01.html
@@ -1143,7 +1143,7 @@ thumbnail: "/assets/img/thumbnail/bricks.webp"
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
