--- a/contact/index.html
+++ b/contact/index.html
@@ -1132,7 +1132,7 @@
     
 
         posts.push({
-            'title'    : "정규화",
+            'title'    : "정규화/반정규화",
             'path'     : "License > SQLD",
             'type'     : "post",
             'tags'     : "License, SQLD, SQL, DB",
