deploy: 2382bb0d70d2ffb61024ac54af9f7f3d1f170fe3

--- a/License/SQLD/관계.html
+++ b/License/SQLD/관계.html
@@ -687,7 +687,9 @@
 <blockquote>
   <ul>
     <li>엔터티와의 연관성</li>
-    <li>인스턴스의 논리적인 연관성을 파악</li>
+    <li>인스턴스의 논리적인 연관성을 파악 =&gt; 페어링</li>
+    <li>부모 식별자를 자식에게 상속하고 공통된 식별자를 맵핑(조인)키로 활용</li>
+    <li>사원 - 부서 일 경우 부서가 우선이어야 함 (부서 테이블이 부모에 해당)</li>
   </ul>
 </blockquote>
 
